--- a/SimpleScreenRecorder.Model/SimpleScreenRecorder.Model.csproj
+++ b/SimpleScreenRecorder.Model/SimpleScreenRecorder.Model.csproj
@@ -45,6 +45,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DispatcherService.cs" />
     <Compile Include="Recorder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CustomScreen.cs" />
