--- a/SimpleScreenRecorder/SimpleScreenRecorder.View.csproj
+++ b/SimpleScreenRecorder/SimpleScreenRecorder.View.csproj
@@ -102,6 +102,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SimpleScreenRecorder.Model\SimpleScreenRecorder.Model.csproj">
+      <Project>{14A241BF-3DAC-45CF-9F2E-A57BD4563900}</Project>
+      <Name>SimpleScreenRecorder.Model</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SimpleScreenRecorder.ViewModel\SimpleScreenRecorder.ViewModel.csproj">
       <Project>{35d84d84-1d29-441d-9a47-95458a422460}</Project>
       <Name>SimpleScreenRecorder.ViewModel</Name>
