--- a/SimpleScreenRecorder.Model/packages.config
+++ b/SimpleScreenRecorder.Model/packages.config
@@ -1,6 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Accord" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.Video" version="3.8.0" targetFramework="net472" />
-  <package id="Accord.Video.FFMPEG" version="3.8.0" targetFramework="net472" />
+  <package id="ScreenRecorderLib" version="3.0.1" targetFramework="net472" />
 </packages>
