--- a/SimpleScreenRecorder.ViewModel/SimpleScreenRecorder.ViewModel.csproj
+++ b/SimpleScreenRecorder.ViewModel/SimpleScreenRecorder.ViewModel.csproj
@@ -52,6 +52,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PresentationCore" />
+    <Reference Include="ScreenRecorderLib">
+      <HintPath>..\SimpleScreenRecorder.Model\bin\x86\Debug\ScreenRecorderLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
